After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670131 - Incorrect active time report
Incorrect active time report
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: general
CVS HEAD
Other Linux
: Normal trivial
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-15 12:03 UTC by Romuald Brunet
Modified: 2012-02-15 13:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix (1.06 KB, patch)
2012-02-15 12:03 UTC, Romuald Brunet
accepted-commit_now Details | Review
dbus command GetActiveTime returns an unsigned int (1.10 KB, patch)
2012-02-15 13:05 UTC, Matthias Clasen
committed Details | Review

Description Romuald Brunet 2012-02-15 12:03:18 UTC
Created attachment 207620 [details] [review]
fix 

The "gnome-screensaver-command -t" command seems to always report the same incorrect time of 1099853556 seconds.

After a little digging, it seems that gnome-screensaver-command tries to retrieve an integer instead of a unsigned integer.

changed "(i)" to "(u)" in g_variant_get seems to fix the problem.

I've attached the patch.


Tested on Linux Ubuntu Oneiric with version 3.2.0.
The patch was generated from the git repository.
Comment 1 Matthias Clasen 2012-02-15 12:43:08 UTC
Review of attachment 207620 [details] [review]:

Looks right, thanks
Comment 2 Matthias Clasen 2012-02-15 13:05:03 UTC
The following fix has been pushed:
ecfa197 dbus command GetActiveTime returns an unsigned int
Comment 3 Matthias Clasen 2012-02-15 13:05:06 UTC
Created attachment 207645 [details] [review]
dbus command GetActiveTime returns an unsigned int

fix a bug in gnome-screensaver-command (always retuned "active for
1099853556 seconds")