dbus command GetActiveTime returns an unsigned int

fix a bug in gnome-screensaver-command (always retuned "active for
1099853556 seconds")

https://bugzilla.gnome.org/show_bug.cgi?id=670131