src/gnome-screensaver-command.c
@@ -250,7 +250,7 @@ do_command (GDBusConnection *connection)
                         }
 
                         body = g_dbus_message_get_body (reply);
-                        g_variant_get (body, "(i)", &t);
+                        g_variant_get (body, "(u)", &t);
                         g_object_unref (reply);
 
                         g_print (ngettext ("The screensaver has been active for %d second.\n", "The screensaver has been active for %d seconds.\n", t), t);
